@@ -4,6 +4,7 @@
 
     Checks & Agents:
     * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
+    * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
 
     Multisite:
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
